--- a/RenuxServer/Pages/_ViewImports.cshtml
+++ b/RenuxServer/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using RenuexServer
-@namespace RenuexServer.Pages
+﻿@using RenuxServer
+@namespace RenuxServer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
